<?xml version="1.0"?>
<package>
  <name>reem_description</name>
  <version>0.0.1</version>
  <description>This package contains the description (mechanical, kinematic, visual, etc.) of the REEM robot.</description>
  <maintainer email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodríguez Tsouroukdissian</maintainer>
  <license>Creative Commons BY-NC-ND 3.0</license>
  <url type="website">http://ros.org/wiki/reem_description</url>
  <author email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodríguez Tsouroukdissian</author>

  <buildtool_depend>catkin</buildtool_depend>
<!--   pr2_mechanism_model hasn't been catkinized yet -> Gazebo simulation won't work with the controller -->
<!--   <build_depend>pr2_mechanism_model</build_depend> -->
<!--   <run_depend>pr2_mechanism_model</run_depend> -->
</package>