<?xml version="1.0"?>
<package>
  <name>reem_machine</name>
  <version>0.0.1</version>
  <description>This package contains the xxx.machine files that describe the different hosts a node can be spawned on.</description>
  <maintainer email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodríguez Tsouroukdissian</maintainer>
  <license>TODO</license>
  <url type="website">http://ros.org/wiki/reem_machine</url>
  <author email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodríguez Tsouroukdissian</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>